# picorv32ima-linux-w25q128

./: CMakeLists.txt
no-OS-FatFS-SD-SPI-RPi-Pico/: README.md  library.json
no-OS-FatFS-SD-SPI-RPi-Pico/include/: FatFsSd.h  FatFsSd_C.h
no-OS-FatFS-SD-SPI-RPi-Pico/src/: CMakeLists.txt
no-OS-FatFS-SD-SPI-RPi-Pico/src/include/: my_debug.h
no-OS-FatFS-SD-SPI-RPi-Pico/src/sd_driver/: SdCardInfo.h  sd_card.c
no-OS-FatFS-SD-SPI-RPi-Pico/src/sd_driver/SDIO/: SdioCard.h  ZuluSCSI_platform.h  rp2040_sdio.c  rp2040_sdio.h  rp2040_sdio.pio  rp2040_sdio.pio.h  sd_card_sdio.c
no-OS-FatFS-SD-SPI-RPi-Pico/src/sd_driver/SPI/: sd_card_constants.h  sd_card_spi.c  sd_card_spi.h  sd_spi.c  spi.h
no-OS-FatFS-SD-SPI-RPi-Pico/src/source/: FatFsSd.cpp
pico-displayDrivs/: CMakeLists.txt  README.md
pico-displayDrivs/gfx/: CMakeLists.txt  gfx.c  gfx.h
pico-displayDrivs/st7735/: CMakeLists.txt  README.md  st7735.c  st7735.h
pico-rv32ima/: CMakeLists.txt  cache.c  cache.h  cdc_console.c  cdc_console.h  default64mbdtc.h  emulator.c  emulator.h  main.c  mini-rv32ima.h  ram.c  ram.h  rv32_config.h  sd_hw_config.c  terminal.c  terminal.h  usb_descriptors.c
pico-rv32ima/tusb_inc/: tusb_config.h
